<resources>
    <string name="app_name" translatable="false">e-nsurance</string>
    <string name="e_mail">E-mail</string>
    <string name="authentifier">Log in</string>
    <string name="creer_compte">Sign up</string>
    <string name="mot_de_passe">Password</string>
    <string name="mot_de_passe_oubli">Forgotten password ?</string>
    <string name="retaper_mot_de_passe">Re-enter the password</string>
    <string name="declarer_accident">Declare an accident</string>
    <string name="urgences">Emergency</string>
    <string name="police">Police</string>
    <string name="assurance">Ensurance</string>
    <string name="assistance">Assistance</string>
    <string name="title_activity_client_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="parametres">Settings</string>
    <string name="aide">Help</string>
    <string name="autres">Others</string>
    <string name="gerer_vos_vehicules">Manage your vehicles</string>
    <string name="hopitaux_et_pharmacies">Hospitals and pharmacies</string>
    <string name="numeros_urgence">Emergency numbers</string>
    <string name="se_deconnecter">Sign out</string>
    <string name="suivi_de_vos_dossiers">Tracking your files</string>
    <string name="propos">About</string>
    <string name="avant_de_commencer_mettez_vous_en_securite">Before you start, get to safety</string>
    <string name="consignes_de_securite">Safety instructions</string>
    <string name="feux_de_detresse">Hazard lights</string>
    <string name="gilets_de_securite">Safety vests</string>
    <string name="triangle_de_signalisation">Warning triangle</string>
    <string name="appeler_les_urgences">Call the emergency</string>
    <string name="version">Version of the application : </string>
    <string name="declarer">Declare</string>
    <string name="rue">Street</string>
    <string name="ville">City</string>
    <string name="pays">Country</string>
    <string name="date_de_naissance">Date of birth</string>
    <string name="n_telephone">Phone number</string>
    <string name="nom">Last name</string>
    <string name="prenom">First name</string>
    <string name="valider">Validate</string>
    <string name="choisir_une_photo">Choose a photo</string>
    <string name="mon_profil">My profile</string>
    <string name="prendre_une_photo">Take a photo</string>
    <string name="supprimer">Delete</string>
    <string name="ma_position">My position</string>
    <string name="ambulance">Ambulance</string>
    <string name="pompiers">Firefighters</string>
    <string name="gendarmerie">Gendarmerie</string>
    <string name="annuler">Cancel</string>
    <string name="changer_photo_profil">Change profile picture</string>
    <string name="remplir_un_constat">Fill in a statement</string>
    <string name="n_contrart_assurance">N ° Contract Insurance</string>
    <string name="title_activity_vehicule">Vehicules</string>
    <string name="votre_date_du_permis_de_conduire">Driver\'s License Date</string>
    <string-array name="typevehicule">
        <item>Car</item>
        <item>Motorbike</item>
        <item>Truck</item>
    </string-array>

    <string-array name="categ_permis">
        <item>A1</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
    </string-array>

    <string-array name="assurances">
        <item>AAAAAAA</item>
        <item>BBBBBBB</item>
        <item>CCCCCCC</item>
        <item>DDDDDDD</item>
        <item>EEEEEEE</item>
        <item>FFFFFFF</item>
        <item>GGGGGGG</item>
    </string-array>
    <string name="ajouter_vehicule">Add / Edit a vehicle</string>
    <string name="permission_refuse">Permission denied.</string>
    <string name="constat">Statement</string>
    <string name="hopitaux">Hospitals</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="precedent">Previous</string>
    <string name="recherche_en_cours">Search in progress ...</string>
    <string name="suivant">Next</string>
    <string name="votre_position">Your position</string>
    <string name="adresse">Adress</string>
    <string name="temoin">Witness</string>
    <string name="annuler_constat">Cancel statement</string>
    <string name="etes_vous_sur_annuler_constat">Are you sure you want to cancel the statement ?</string>
    <string name="etes_vous_sur_supp_vehicule">Are you sure you want to delete this vehicle ?</string>
    <string name="non">No</string>
    <string name="oui">Yes</string>
    <string name="reprendre">Resume</string>
    <string name="declaration">Declaration</string>
    <string name="succes">Success</string>
    <string name="chargement">Loading ...</string>
    <string name="erreur">Error</string>
    <string name="ce_champs_ne_doit_etre_vide">This field must not be empty.</string>
    <string name="email_non_valide">Not a valid email address.</string>
    <string name="mot_de_passe_incorrect">Incorrect password</string>
    <string name="terminer">Finish</string>
    <string name="mot_de_passe_non_identique">Non-identical passwords</string>
    <string name="dossiers">Files</string>
    <string name="title_activity_constateur_home">ConstateurHomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps_tracking">Map</string>
    <string name="title_activity_declaration_maps">Map</string>
    <string name="no">No</string>
    <string name="locate_accidents">Locate Accidents</string>
</resources>
