<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/blur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:alpha="0.5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@mipmap/ic_launcher_round"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:elevation="10dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryLight"
            android:elevation="10dp"
            android:layout_below="@id/logo" />

        <LinearLayout
            android:id="@+id/llAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_below="@id/title"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/e_mail"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/mot_de_passe"
                    android:textColor="@color/white"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/authentifier"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                custom:pb_colorComplete="@color/green_complete"
                custom:pb_colorNormal="@color/colorPrimary"
                custom:pb_colorPressed="@color/colorPrimaryDark"
                custom:pb_colorProgress="@color/purple_progress"
                custom:pb_textComplete="@string/succes"
                custom:pb_textProgress="@string/chargement"
                custom:pb_textError="@string/erreur"
                custom:pb_colorError="@color/red_error" />


            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/txtCreerCompte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creer_compte"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/txtPassOuble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mot_de_passe_oubli"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="20dp" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>