<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:paddingTop="20dp">

    <Button
        android:id="@+id/choisir_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choisir_une_photo"
        android:background="@color/colorPrimary"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/prendre_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prendre_une_photo"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/supprimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supprimer"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:textColor="@color/white" />

</LinearLayout>