<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp">

    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textView3"
        android:ems="10"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:textSize="15sp"
        android:layout_alignBaseline="@id/nom"/>

    <EditText
        android:id="@+id/prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nom"
        android:ems="10"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nom"
        android:text="@string/prenom"
        android:textSize="15sp"
        android:layout_alignBaseline="@id/prenom"/>

    <EditText
        android:id="@+id/tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/prenom"
        android:layout_toEndOf="@id/textView3"
        android:layout_marginTop="10dp"
        android:inputType="phone"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_telephone"
        android:layout_below="@+id/prenom"
        android:textSize="15sp"
        android:layout_alignBaseline="@id/tel"
        android:layout_marginEnd="10dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/tel"
        android:layout_toEndOf="@id/textView3"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:layout_below="@+id/tel"
        android:textSize="15sp"
        android:layout_alignBaseline="@id/email"
        android:layout_marginEnd="10dp" />

    <EditText
        android:id="@+id/adresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/email"
        android:layout_toEndOf="@id/textView3"
        android:layout_marginTop="10dp"
        android:inputType="textPostalAddress"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adresse"
        android:layout_below="@+id/email"
        android:textSize="15sp"
        android:layout_alignBaseline="@id/adresse"
        android:layout_marginEnd="10dp" />
</RelativeLayout>
